force-app/main/default/objects/Stripe_Config__mdt/Stripe_Config__mdt.object-meta.xml
<CustomObject>
    <label>Stripe Config</label>
    <pluralLabel>Stripe Configs</pluralLabel>
</CustomObject>