force-app/main/default/objects/Stripe_Config__mdt/fields/BaseUrl__c.field-meta.xml
<CustomField>
    <fullName>BaseUrl__c</fullName>
    <defaultValue>&quot;https://api.stripe.com&quot;</defaultValue>
    <label>BaseUrl</label>
    <type>Url</type>
</CustomField>