force-app/main/default/objects/Stripe_Config__mdt/fields/Publishable_key__c.field-meta.xml
<CustomField>
    <fullName>Publishable_key__c</fullName>
    <label>Publishable key</label>
    <length>327</length>
    <type>LongTextArea</type>
</CustomField>