force-app/main/default/objects/Stripe_Config__mdt/fields/Secret_key__c.field-meta.xml
<CustomField>
    <fullName>Secret_key__c</fullName>
    <label>Secret key</label>
    <length>327</length>
    <type>LongTextArea</type>
</CustomField>